[gd_scene load_steps=2 format=3 uid="uid://bweiw3sq5n8sq"]

[ext_resource type="Script" uid="uid://280cmbxiqt5r" path="res://EscenasGenerales/Multiplayer/ResultadosMultijugador.gd" id="1_def"]

[node name="Resultados" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_def")

[node name="Resultados#Fondo" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.12, 0.18, 0.97)

[node name="Resultados#VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 420)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.18
anchor_right = 0.75
anchor_bottom = 0.85

[node name="Resultados_VBoxContainer#LabelTitulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -137.0
offset_right = 166.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 58
text = "Â¡Resultados!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resultados_VBoxContainer#LabelGanador" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -53.0
offset_right = 81.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.98, 0.7, 1)
theme_override_font_sizes/font_size = 36
text = "Ganador: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resultados_VBoxContainer#LabelStats" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 13.0
offset_right = 70.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.85, 0.9, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Puntaje: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resultados_VBoxContainer#BotonSalir" type="Button" parent="."]
custom_minimum_size = Vector2(180, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 78.0
offset_right = 86.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Salir"
